tests/netconvert/import/XML/errors/broken_edge/edge#fromnode__empty4/errors.netconvert
Error: Attribute 'from' in definition of a edge is empty.
Quitting (on error).
